sillevis/chase/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chase
  namespace: sillevis
  labels:
    app: chase
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: chase
