sillevis/chase/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chase
  namespace: sillevis
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  rules:
  - host: chase.sillevis.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chase
            port:
              number: 80
  tls:
  - hosts:
    - chase.sillevis.net
    secretName: chase-sillevis-net-tls
